Firebase set up.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,10 @@
 <div class="hero-unit">
-  <h1>Fancy Comoyo Prototyping</h1>
+  <h1>Fancy Words</h1>
   <br>
 
   <p>Here are some fancy words:</p>
   <ol>
-      <li ng-repeat="word in fancyWords">{{word}}</li>
+      <li ng-repeat="item in items">{{item}}</li>
   </ol>
 
   <form class="form-inline" ng-submit="addWord()">
